--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
 <mat-horizontal-stepper labelPosition="bottom">
   <mat-step>
-    <ng-template matStepLabel>Hotel Info.</ng-template>
+    <ng-template matStepLabel>General Information</ng-template>
   </mat-step>
-  <mat-step>
-    <ng-template matStepLabel>Owner Info.</ng-template></mat-step
-  >
-  <mat-step>
-    <ng-template matStepLabel>Contact Person Info.</ng-template></mat-step
-  >
-  <mat-step>
-    <ng-template matStepLabel>Location Info.</ng-template></mat-step
-  >
-  <mat-step>
-    <ng-template matStepLabel>Payment Info.</ng-template></mat-step
-  >
+  <mat-step> <ng-template matStepLabel>Contact Information</ng-template></mat-step>
+  <mat-step> <ng-template matStepLabel>Payment Information</ng-template></mat-step>
 </mat-horizontal-stepper>
