--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,67 @@
-<mat-horizontal-stepper labelPosition="bottom">
-  <mat-step>
-    <ng-template matStepLabel>General Information</ng-template>
+<mat-horizontal-stepper #stepper>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Contact Information</ng-template>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Enter your full name"
+          formControlName="fullName"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Enter your email"
+          formControlName="email"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Enter your phone number"
+          formControlName="phone"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Enter your shipping address"
+          formControlName="address"
+          required
+        />
+      </mat-form-field>
+      <div>
+        <button mat-raised-button color='primary' matStepperNext>Save & Proceed to Payment Info</button>
+      </div>
+    </form>
   </mat-step>
-  <mat-step> <ng-template matStepLabel>Contact Information</ng-template></mat-step>
-  <mat-step> <ng-template matStepLabel>Payment Information</ng-template></mat-step>
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Payment Information</ng-template>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Address"
+          formControlName="secondCtrl"
+          required
+        />
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    You are now done.
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
 </mat-horizontal-stepper>
